xLib6000 Change Log

v1.1.7

EqualizerCommands.swift - corrected level commands ("<band>Hz" vs "<band>hz")


v1.1.6

IqStream, Meter, Panadapter, Slice & Tnf.swift - refactored all "find" functions
moved statics KMin & kMax from Radio to Api; renamed to kControlMin & kControlMax; usage corrected in multiple files
moved statics KNotInUse & kRemoved from Radio to Api; usage corrected in multiple files

v1.1.5

Api.swift - added static property daxIqChannels
Radio.swift - modified parseReply(_:) to pass replies to the defaultReplyHandler
Api.swift - made kNoError a static
Radio.swift - removed "private let kNoError = "0", used static in Api.swift
Radio.swift - added code in parseStatus(_:), case tnf, to recognize tnf removed
Radio.swift - added code in defaultReplyHandler(_:seqNum:responseValue:reply:) for tnf removal
Tnf.swift - added code in parseStatus(_:radio:queue:inUse:) to process tnf removed
Slice.swift - commented out dsb, dstr & fdv in Mode enum
Slice.swift - removed usage of dsb, dstr & fdv modes
Memory.swift - removed usage of dsb, dstr & fdv modes

v1.1.4

*** Client Facing ****
all dynamic models with streams - changed the function signature of the StreamHandler method (see Protocols.swift)

refactored many of the protocols and moved them to the Protocols.swift file
Meters.swift - added code to vitaProcessor(_:) to ignore duplicate meters in a single Vita packet
Slice.swift - added findActive()

v1.1.3

Api.swift - added "sub meter all" into allSubscriptionCommands()
Radio.swift - removed the _metersToSubscribe property
Meter.swift - corrected the logic in parseStatus(_:radio:queue:inUse:) for NOT inUse
MeterCommands.swift - changed listRequest(callback: ) to NOT use the defaultReplyHandler
Radio.swift - commented out the meterList case in defaultReplyHandler(_:seqNum:responseValue:reply:)
Radio.swift - commented out the parseMeterListReply(_:) method
All Models - changed _api and _q property from var to let